// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCard - util/CreditCardTypeIcon Expect to render Amex card 1`] = `
<div>
  <svg
    class="MuiBox-root css-6rlkhh"
    data-testId="Amex"
    sx="[object Object]"
  >
    cc_amex.svg
  </svg>
</div>
`;

exports[`CreditCard - util/CreditCardTypeIcon Expect to render Discover card 1`] = `
<div>
  <svg
    class="MuiBox-root css-6rlkhh"
    data-testId="Discover"
    sx="[object Object]"
  >
    cc_discover.svg
  </svg>
</div>
`;

exports[`CreditCard - util/CreditCardTypeIcon Expect to render Generic card 1`] = `
<div>
  <svg
    class="MuiBox-root css-6rlkhh"
    data-testId="Generic"
    sx="[object Object]"
  >
    cc_generic.svg
  </svg>
</div>
`;

exports[`CreditCard - util/CreditCardTypeIcon Expect to render Mastercard card 1`] = `
<div>
  <svg
    class="MuiBox-root css-6rlkhh"
    data-testId="Mastercard"
    sx="[object Object]"
  >
    cc_mastercard.svg
  </svg>
</div>
`;

exports[`CreditCard - util/CreditCardTypeIcon Expect to render Visa card 1`] = `
<div>
  <svg
    class="MuiBox-root css-6rlkhh"
    data-testId="Visa"
    sx="[object Object]"
  >
    cc_visa.svg
  </svg>
</div>
`;

exports[`CreditCard - util/CreditCardTypeIcon Expect to render expired card 1`] = `
<div>
  <svg
    class="MuiBox-root css-6rlkhh"
    data-testId="Generic"
    filter="grayscale(100%)"
    sx="[object Object]"
  >
    cc_generic.svg
  </svg>
</div>
`;
